[gd_scene load_steps=66 format=2]

[ext_resource path="res://assets/audio/grenade_throw.wav" type="AudioStream" id=1]
[ext_resource path="res://src/Troops/Player.gd" type="Script" id=2]
[ext_resource path="res://src/Troops/Reloading.gd" type="Script" id=3]
[ext_resource path="res://src/Troops/ThrowGrenade.gd" type="Script" id=4]
[ext_resource path="res://src/Troops/Interact.gd" type="Script" id=5]
[ext_resource path="res://src/HUD/PlayerHUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/HealthSystem/HealthSystem.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Troops/PlayerTroopShooting.gd" type="Script" id=8]
[ext_resource path="res://src/Troops/PointsTracker.gd" type="Script" id=9]
[ext_resource path="res://src/Troops/Movement.gd" type="Script" id=10]
[ext_resource path="res://src/Troops/TroopStateMachine.gd" type="Script" id=11]
[ext_resource path="res://src/Troops/Dead.gd" type="Script" id=12]
[ext_resource path="res://src/Troops/Jump.gd" type="Script" id=13]
[ext_resource path="res://src/Troops/Walk.gd" type="Script" id=14]
[ext_resource path="res://src/Troops/Roll.gd" type="Script" id=15]
[ext_resource path="res://src/Troops/Run.gd" type="Script" id=16]
[ext_resource path="res://src/Troops/Weapons/Pistol.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/Troops/Melee.gd" type="Script" id=20]
[ext_resource path="res://src/Troops/GranadeLauncher.gd" type="Script" id=21]
[ext_resource path="res://assets/models/ybot/TroopModelNew.tscn" type="PackedScene" id=22]
[ext_resource path="res://assets/audio/punch.wav" type="AudioStream" id=23]
[ext_resource path="res://assets/audio/no_ammo.wav" type="AudioStream" id=24]
[ext_resource path="res://assets/audio/reload.mp3" type="AudioStream" id=25]
[ext_resource path="res://src/Bullets/HeadshotBullet.tscn" type="PackedScene" id=29]

[sub_resource type="BoxShape3D" id=6]
extents = Vector3( 1.0304, 0.268886, 0.609748 )

[sub_resource type="CapsuleShape3D" id=3]
radius = 0.6
height = 2.4

[sub_resource type="Animation" id=5]
resource_name = "Melee"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Model/MeleeHitBox/CollisionShape3D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5, 1 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/Melee")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0.5 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "impulse"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape3D:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 2.4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape3D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0.6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Model/MeleeHitBox/CollisionShape3D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=66]
resource_name = "Reload"
length = 4.2
tracks/0/type = "method"
tracks/0/path = NodePath("Shooting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 3.8 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "reload_current_weapon"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Roll"
length = 2.4
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.4, 1.5, 1.8 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -0.769913, 0 ), Vector3( 0, -0.769913, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape3D:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.4, 1.5, 1.8 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ 2.4, 0.8, 0.8, 2.4 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("StateMachine/Roll")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0.4 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "impulse"
} ]
}

[sub_resource type="Animation" id=78]
resource_name = "ThrowGrenade"
length = 2.767
tracks/0/type = "method"
tracks/0/path = NodePath("Shooting/LaunchGrenade")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 2 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "launch_granade"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=67]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "punch"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "roll"

[sub_resource type="AnimationNodeAnimation" id=68]
animation = "sitting"

[sub_resource type="AnimationNodeAnimation" id=72]
animation = "grenadethrow"

[sub_resource type="AnimationNodeAnimation" id=73]
animation = "reload"

[sub_resource type="AnimationNodeStateMachine" id=74]
states/grenadethrow/node = SubResource( 72 )
states/grenadethrow/position = Vector2( 540, 128 )
states/reload/node = SubResource( 73 )
states/reload/position = Vector2( 223, 149 )

[sub_resource type="AnimationNodeAnimation" id=87]
animation = "walkright"

[sub_resource type="AnimationNodeAnimation" id=88]
animation = "walkbackward"

[sub_resource type="AnimationNodeAnimation" id=89]
animation = "walkleft"

[sub_resource type="AnimationNodeAnimation" id=59]
animation = "walkforward"

[sub_resource type="AnimationNodeAnimation" id=60]
animation = "riflerun"

[sub_resource type="AnimationNodeBlendSpace1D" id=90]
blend_point_0/node = SubResource( 59 )
blend_point_0/pos = 0.0
blend_point_1/node = SubResource( 60 )
blend_point_1/pos = 1.0
min_space = 0.0

[sub_resource type="AnimationNodeAnimation" id=62]
animation = "rifleaim"

[sub_resource type="AnimationNodeAnimation" id=63]
animation = "rifleidle"

[sub_resource type="AnimationNodeBlend2" id=64]

[sub_resource type="AnimationNodeBlendTree" id=91]
nodes/Animation/node = SubResource( 63 )
nodes/Animation/position = Vector2( 226.08, 159.84 )
"nodes/Animation 2/node" = SubResource( 62 )
"nodes/Animation 2/position" = Vector2( 100, 320 )
nodes/aim/node = SubResource( 64 )
nodes/aim/position = Vector2( 380, 200 )
nodes/output/position = Vector2( 680, 260 )
node_connections = [ "output", 0, "aim", "aim", 0, "Animation", "aim", 1, "Animation 2" ]

[sub_resource type="AnimationNodeBlendSpace2D" id=47]
resource_local_to_scene = true
blend_point_0/node = SubResource( 87 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 88 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 89 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 90 )
blend_point_3/pos = Vector2( 0, 1 )
blend_point_4/node = SubResource( 91 )
blend_point_4/pos = Vector2( 0, 0 )

[sub_resource type="AnimationNodeOneShot" id=50]
filter_enabled = true
filters = [ "Skeleton3D:mixamorig_Head", "Skeleton3D:mixamorig_LeftArm", "Skeleton3D:mixamorig_LeftForeArm", "Skeleton3D:mixamorig_LeftHand", "Skeleton3D:mixamorig_LeftHandIndex1", "Skeleton3D:mixamorig_LeftHandIndex2", "Skeleton3D:mixamorig_LeftHandIndex3", "Skeleton3D:mixamorig_LeftHandMiddle1", "Skeleton3D:mixamorig_LeftHandMiddle2", "Skeleton3D:mixamorig_LeftHandMiddle3", "Skeleton3D:mixamorig_LeftHandPinky1", "Skeleton3D:mixamorig_LeftHandPinky2", "Skeleton3D:mixamorig_LeftHandPinky3", "Skeleton3D:mixamorig_LeftHandRing1", "Skeleton3D:mixamorig_LeftHandRing2", "Skeleton3D:mixamorig_LeftHandRing3", "Skeleton3D:mixamorig_LeftHandThumb1", "Skeleton3D:mixamorig_LeftHandThumb2", "Skeleton3D:mixamorig_LeftHandThumb3", "Skeleton3D:mixamorig_LeftShoulder", "Skeleton3D:mixamorig_Neck", "Skeleton3D:mixamorig_RightArm", "Skeleton3D:mixamorig_RightForeArm", "Skeleton3D:mixamorig_RightHand", "Skeleton3D:mixamorig_RightHandIndex1", "Skeleton3D:mixamorig_RightHandIndex2", "Skeleton3D:mixamorig_RightHandIndex3", "Skeleton3D:mixamorig_RightHandMiddle1", "Skeleton3D:mixamorig_RightHandMiddle2", "Skeleton3D:mixamorig_RightHandMiddle3", "Skeleton3D:mixamorig_RightHandPinky1", "Skeleton3D:mixamorig_RightHandPinky2", "Skeleton3D:mixamorig_RightHandPinky3", "Skeleton3D:mixamorig_RightHandRing1", "Skeleton3D:mixamorig_RightHandRing2", "Skeleton3D:mixamorig_RightHandRing3", "Skeleton3D:mixamorig_RightHandThumb1", "Skeleton3D:mixamorig_RightHandThumb2", "Skeleton3D:mixamorig_RightHandThumb3", "Skeleton3D:mixamorig_RightShoulder", "Skeleton3D:mixamorig_Spine", "Skeleton3D:mixamorig_Spine1", "Skeleton3D:mixamorig_Spine2" ]

[sub_resource type="AnimationNodeBlendTree" id=48]
graph_offset = Vector2( -694.148, 233.236 )
nodes/OneShotStateMachine/node = SubResource( 74 )
nodes/OneShotStateMachine/position = Vector2( -20, 500 )
nodes/move/node = SubResource( 47 )
nodes/move/position = Vector2( -120, 240 )
nodes/one_shot/node = SubResource( 50 )
nodes/one_shot/position = Vector2( 120, 160 )
node_connections = [ "output", 0, "one_shot", "one_shot", 0, "move", "one_shot", 1, "OneShotStateMachine" ]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=69]

[sub_resource type="AnimationNodeStateMachineTransition" id=70]

[sub_resource type="AnimationNodeStateMachineTransition" id=71]

[sub_resource type="AnimationNodeStateMachineTransition" id=79]

[sub_resource type="AnimationNodeStateMachineTransition" id=80]

[sub_resource type="AnimationNodeStateMachineTransition" id=81]

[sub_resource type="AnimationNodeStateMachine" id=45]
states/die/node = SubResource( 67 )
states/die/position = Vector2( 413, 341 )
states/punch/node = SubResource( 31 )
states/punch/position = Vector2( 162, 95 )
states/roll/node = SubResource( 33 )
states/roll/position = Vector2( 190, 212 )
states/sitting/node = SubResource( 68 )
states/sitting/position = Vector2( 573, 181 )
states/walk/node = SubResource( 48 )
states/walk/position = Vector2( 368, 118 )
transitions = [ "punch", "walk", SubResource( 51 ), "walk", "punch", SubResource( 52 ), "roll", "walk", SubResource( 53 ), "walk", "roll", SubResource( 54 ), "walk", "die", SubResource( 69 ), "walk", "sitting", SubResource( 70 ), "sitting", "walk", SubResource( 71 ), "roll", "die", SubResource( 79 ), "sitting", "die", SubResource( 80 ), "punch", "die", SubResource( 81 ) ]
start_node = "walk"
end_node = "walk"
graph_offset = Vector2( -191, 27 )

[sub_resource type="AnimationNodeBlendTree" id=8]
graph_offset = Vector2( 699.52, 405.087 )
nodes/StateMachine/node = SubResource( 45 )
nodes/StateMachine/position = Vector2( 1280, 360 )
nodes/output/position = Vector2( 1640, 360 )
node_connections = [ "output", 0, "StateMachine" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=46]

[sub_resource type="AnimationNodeStateMachinePlayback" id=75]

[node name="Player" type="CharacterBody3D" groups=["Players", "Troops"]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="Movement" type="Node" parent="."]
script = ExtResource( 10 )

[node name="Model" parent="." instance=ExtResource( 22 )]

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Model/Skeleton3D" index="2"]
transform = Transform3D( -0.0552482, -0.983342, -0.173164, -0.316019, -0.147292, 0.93725, -0.947142, 0.106505, -0.302618, -0.315888, 1.02741, 0.19741 )
bone_name = "mixamorig_RightHand"

[node name="Weapons" type="Node3D" parent="Model/Skeleton3D/BoneAttachment3D"]
unique_name_in_owner = true
transform = Transform3D( 0.0679044, -0.0832143, 0.488329, 0.490528, -0.0574427, -0.0779988, 0.069083, 0.48967, 0.0738364, -0.267242, -0.00359118, 0.0118586 )
__meta__ = {
"_editor_description_": "Resource?"
}

[node name="Pistol" parent="Model/Skeleton3D/BoneAttachment3D/Weapons" instance=ExtResource( 18 )]
visible = false
bullet_scene = ExtResource( 29 )

[node name="MeleeHitBox" type="Area3D" parent="Model"]
transform = Transform3D( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.885, 0 )
collision_layer = 0
collision_mask = 512
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Model/MeleeHitBox"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.798786, 1.03381 )
shape = SubResource( 6 )
disabled = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Tail" type="RayCast3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.8, 0 )
enabled = true
cast_to = Vector3( 0, -0.4, 0 )

[node name="Shooting" type="Node3D" parent="."]
script = ExtResource( 8 )

[node name="LaunchGrenade" type="Node3D" parent="Shooting"]
script = ExtResource( 21 )

[node name="Throw" type="AudioStreamPlayer" parent="Shooting/LaunchGrenade"]
stream = ExtResource( 1 )
volume_db = 6.992
bus = "Sounds"

[node name="NoAmmo" type="AudioStreamPlayer" parent="Shooting/LaunchGrenade"]
stream = ExtResource( 24 )
bus = "Sounds"

[node name="NoAmmo" type="AudioStreamPlayer" parent="Shooting"]
stream = ExtResource( 24 )
bus = "Sounds"

[node name="Interact" type="Node" parent="."]
script = ExtResource( 5 )
interaction_progress_path = NodePath("../PlayerHUD/Alive/InteractionProgress")

[node name="Timer" type="Timer" parent="Interact"]
one_shot = true

[node name="PlayerHUD" parent="." instance=ExtResource( 6 )]
launch_grenade_path = NodePath("../Shooting/LaunchGrenade")

[node name="Points" parent="PlayerHUD" index="3"]
offset_right = 1160.0
offset_bottom = 846.0

[node name="HealthSystem" parent="." instance=ExtResource( 7 )]
MAX_HEALTH = 300

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 11 )
START_STATE = NodePath("Walk")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 16 )
MAX_SPEED = 9.0

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="Roll" type="Node" parent="StateMachine"]
script = ExtResource( 15 )
MAX_SPEED = 0.0

[node name="Melee" type="Node" parent="StateMachine"]
script = ExtResource( 20 )
MAX_SPEED = 0.0

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 12 )
MAX_SPEED = 0.0

[node name="Reload" type="Node" parent="StateMachine"]
script = ExtResource( 3 )
MAX_SPEED = 3.0

[node name="Reload" type="AudioStreamPlayer" parent="StateMachine/Reload"]
stream = ExtResource( 25 )
bus = "Sounds"

[node name="ThrowGrenade" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
MAX_SPEED = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.26
anims/Melee = SubResource( 5 )
anims/RESET = SubResource( 4 )
anims/Reload = SubResource( 66 )
anims/Roll = SubResource( 2 )
anims/ThrowGrenade = SubResource( 78 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../Model/AnimationPlayer")
active = true
parameters/StateMachine/playback = SubResource( 46 )
parameters/StateMachine/walk/OneShotStateMachine/playback = SubResource( 75 )
parameters/StateMachine/walk/move/blend_position = Vector2( 0.972, 0.158 )
parameters/StateMachine/walk/move/3/blend_position = -0.275479
parameters/StateMachine/walk/move/4/aim/blend_amount = 0.0
parameters/StateMachine/walk/one_shot/active = false

[node name="HurtBox" type="Area3D" parent="." groups=["HurtBox"]]
collision_layer = 512
collision_mask = 0
monitoring = false

[node name="CollisionShape2" type="CollisionShape3D" parent="HurtBox"]
transform = Transform3D( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="CamPos" type="Marker3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.603, 0 )
__meta__ = {
"_editor_description_": "Bones bonding pq segueixi la camera"
}

[node name="AudioListener3D" type="AudioListener3D" parent="."]
current = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = 10.0
bus = "Sounds"

[node name="PointsTracker" type="Node" parent="."]
script = ExtResource( 9 )

[connection signal="points_added" from="." to="PlayerHUD" method="points_added"]
[connection signal="area_entered" from="Model/MeleeHitBox" to="." method="_on_MeleeHitBox_area_entered"]
[connection signal="timeout" from="Interact/Timer" to="Interact" method="_on_Timer_timeout"]
[connection signal="damage_taken" from="HealthSystem" to="PlayerHUD" method="_on_HealthSystem_damage_taken"]
[connection signal="die" from="HealthSystem" to="." method="_on_HealthSystem_die"]
[connection signal="die" from="HealthSystem" to="Shooting" method="_on_HealthSystem_die"]
[connection signal="die" from="HealthSystem" to="PlayerHUD" method="_on_HealthSystem_die"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_animation_finished"]

[editable path="Model"]
[editable path="PlayerHUD"]
